## Process this with automake to create Makefile.in
# some icons by Andrian Valeanu under cc3.0 [loop.png, lock.png, unlock.png]
# https://creativecommons.org/licenses/by/3.0/legalcode


install-exec-am:
	/bin/rm -rf "$(DESTDIR)$(datadir)/$(PACKAGE)/"*
iconsdir = "$(datadir)/$(PACKAGE)/icons"
icons_DATA = \
lives-audio.png \
lives-fullscreen.png\
lives-loop.png \
lives-playsel.png \
lives-sepwin.png \
lives-volume_mute.png \
lives-zoom-in.png \
lives-zoom-out.png \
lives-locked.png \
lives-unlocked.png \
lives-pref_decoding.png \
lives-pref_directory.png \
lives-pref_effects.png \
lives-pref_encoding.png \
lives-pref_gui.png \
lives-pref_jack.png \
lives-pref_midi.png \
lives-pref_misc.png \
lives-pref_net.png \
lives-pref_playback.png \
lives-pref_record.png \
lives-pref_themes.png \
lives-pref_warning.png \
lives-pref_multitrack.png

EXTRA_DIST = $(icons_DATA)
